fix block alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-.container {
-    display: flex;
-    justify-content: flex-start;
-}
 
 
 .sheet {
@@ -15,7 +11,6 @@
 .label {
     font-size: 1.5rem;
     font-weight: bold;
-    vertical-align: middle;
 
 }
 
